2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* inputOnly.2.png:
	* inputOnly.1.png:
	* outputOnly.1.png:
	* outputOnly.2.png:
	* inputOutput.2.0.png:
	* inputOutput.2.1.png:
	* inputOutput.2.2.png:
	* inputOutput.0.2.png:
	* inputOutput.0.1.png:
	* inputOutput.1.0.png:
	* inputOutput.1.2.png:
	* inputOutput.1.1.png: 

2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* eventIn.0.png:
	* eventOut.0.png:
	* AccessTypes.xcf:
	* inputOnly.0.png:
	* outputOnly.0.png:
	* initializeOnly.png:
	* OutlineTreeData.h:
	* inputOutput.0.0.png:
	* exposedField.0.0.png:
	* OutlineTreeModel.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-07-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* OutlineTree.h:
	* OutlineTreeView.h:
	* OutlineIterData.h:
	* OutlineTreeData.h:
	* OutlineTreeModel.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-07-14  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineUserData.h:
	* OutlineIterData.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp: 

2013-07-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Proto.png:
	* PROTO.png:
	* OutlineTree.h:
	* OutlineTreeView.h:
	* HistoryEditor.cpp:
	* OutlineTreeModel.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp: 

2013-07-14  Holger Seelig  <holger.seelig@yahoo.de>

	* eventIn.0.png:
	* eventOut.0.png:
	* AccessTypes.xcf:
	* OutlineTreeModel.h:
	* exposedField.0.0.png:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp: 

2013-07-14  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp: 

2013-07-13  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeView.h:
	* OutlineUserData.h:
	* OutlineTreeModel.h:
	* OutlineTreeView.cpp:
	* OutlineSelection.cpp:
	* OutlineTreeModel.cpp: 

2013-07-12  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineTreeModel.cpp: 
